# HPL2Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _HPL2_2010.vcxproj
CMakeModules/: FindAngelScript.cmake  FindFBX.cmake  FindFMOD.cmake  FindNewton.cmake  FindOgg.cmake  FindTheora.cmake
include/graphics/: GraphicsTypes.h  PostEffect.h  Renderable.h  Renderer.h
include/gui/: GuiSet.h
include/impl/: FmodSoundChannel.h  FmodSoundData.h  GamepadSDL.h  KeyboardSDL.h  LowLevelGraphicsSDL.h  LowLevelInputSDL.h  LowLevelSoundFmod.h  LowLevelSystemSDL.h  MeshLoaderFBX.h  OpenALSoundChannel.h  OpenALSoundData.h  PhysicsJointNewton.h  PhysicsMaterialNewton.h  PhysicsWorldNewton.h
include/impl/angelscript/: aswrappedcall.h
include/input/: InputTypes.h
include/physics/: PhysicsBody.h  PhysicsJoint.h  PhysicsJointBall.h  PhysicsJointHinge.h  PhysicsJointScrew.h  PhysicsJointSlider.h
include/resources/: WorldLoaderHplMap.h
include/scene/: Beam.h  BillBoard.h  GuiSetEntity.h  Light.h  LightPoint.h  LightSpot.h  MeshEntity.h  ParticleSystem.h  SoundEntity.h  SubMeshEntity.h
include/system/: Platform.h
sources/graphics/: FrameBitmap.cpp  Renderer.cpp
sources/gui/: GuiSet.cpp
sources/impl/: CollideShapeNewton.cpp  FmodSoundChannel.cpp  FmodSoundData.cpp  GamepadSDL.cpp  KeyboardSDL.cpp  LowLevelGraphicsSDL.cpp  LowLevelInputSDL.cpp  LowLevelSoundFmod.cpp  LowLevelSoundOpenAL.cpp  LowLevelSystemSDL.cpp  MouseSDL.cpp  MutexSDL.cpp  PhysicsBodyNewton.cpp  PhysicsMaterialNewton.cpp  PhysicsWorldNewton.cpp  PlatformMacOSX.mm  PlatformSDL.cpp  PlatformUnix.cpp  SDLEngineSetup.cpp  SqScript.cpp  ThreadSDL.cpp  scriptarray.cpp
sources/impl/angelscript/: scriptarray.cpp  scripthelper.cpp  scriptstdstring.cpp  scriptstdstring_utils.cpp
sources/input/: Gamepad.cpp  Input.cpp
sources/resources/: BinaryBuffer.cpp  WorldLoaderHplMap.cpp
sources/system/: String.cpp
tools/editors/: CMakeLists.txt
tools/editors/common/: EditorWindowEntityEditBoxJoint.h  EntityWrapperSubMesh.cpp
tools/editors/materialeditor/: BuildID_MaterialEditor.h
tools/mshconverter/: CMakeLists.txt
